src/utils/__test__/__snapshots__/error-helpers.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#formatMessages Format ESLint Warnings 1`] = `
" 5:16  warning  React.createClass is deprecated since React 15.5.0, use the npm module create-react-class instead  react/no-deprecated
40:11  warning  No duplicate props allowed                                                                         react/jsx-no-duplicate-props

Where: ./thinking-in-react/src/components/filtered-product-table/filtered-product-table.js


16:11  warning  No duplicate props allowed  react/jsx-no-duplicate-props

Where: ./thinking-in-react/src/components/product-table/product-table.js"
`;

exports[`#formatMessages Format Syntax Error 1`] = `
"Error:

|  Syntax Error: Unexpected token (20:7)

Where: ./thinking-in-react/src/components/product-table/product-table.js

  18 |   return (
  19 |     <div className=\\"productTable\\">
> 20 |       <<table>
     |        ^
  21 |         <thead>
  22 |           <tr>
  23 |             <th>Name</th>"
`;

exports[`#formatMessages Format Webpack Warnings 1`] = `""`;

exports[`#formatMessages Unknown messages 1`] = `
Array [
  "some",
  "custom",
  "messages",
]
`;
